colang-cli/tests/samples/features/if/compile_error/expression_form_without_else.co
fun main() {
  var x = 42;
  var y = if (x <= 50) {
    -1
  };
}
